# rbpf

./: Cargo.toml  README.md  ebpf-text.txt  elf.sh  heap.rs  relative_call.rs
core/: Cargo.toml
core/src/: dentrypoint.rs  entrypoint.rs  lib.rs  processor.rs  syscall.rs  test.rs  types.rs
ebpf/: Cargo.toml
ebpf/src/: handler.rs  lib.rs
format/: Cargo.toml  rbpf-output.txt
format/src/: main.rs
src/: consts.rs  error.rs  main.rs  serialise.rs  types.rs
tester/: Cargo.toml  elf.sh  solana-input.txt
tester/src/: config.rs  cpi.rs  ebpf-dump.txt  ebpffile.rs  entrypoint.rs  input  input.json  input.txt  lib.rs  main.rs  processor.rs  test.rs  types.rs  vm.rs
