[package]
name = "ebpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tester = { path = "../tester" }
borsh = { version = "1.5.1" }
core-types = {path = "../core"}
solana-program = "=1.18.2"
bitcoin = "0.32.1"


[lib]
crate-type = ["cdylib", "lib"] 