[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana_rbpf = "0.8.0"
core-types ={ path = "../core"}
thiserror = "1.0.61"
num-traits = "0.2.19"
solana-program = "=1.18.2"
borsh = "1.5.1"
bitcoin = "0.32.1"
log = "0.4.21"
sha256 = "1.5.0"